bmx-kubernetes/scripts/args/mfp-deployment-lite-appcenter.yaml
apiVersion: v1
kind: Service
metadata:
  name: mfpappcenter
  namespace: default
  labels:
    app: mfpappcenter
spec:
  type: NodePort
  selector:
    app: mfpappcenter
  ports:
   - protocol: TCP
     port: 9080
     name: tcp-9080
   - protocol: TCP
     port: 9443
     name: tcp-9443
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mfpappcenter
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      name: mfpappcenter
      labels:
        app: mfpappcenter
    spec:
      containers:
        - name: mfpappcenter
          image: <registry.ng.bluemix.net/repository/mfpappcenter:latest>
          imagePullPolicy: Always
          volumeMounts:
            - name: mfpconfigvolume
              mountPath: /opt/ibm/MobileFirst/envs/mfpenvfile
      volumes:
        - name: mfpconfigvolume
          configMap:
            name: mfp-configmap-appcenter
      imagePullSecrets:
        - name: bluemix-default-secret
---
