bmx-kubernetes/scripts/args/mfpf-deployment-lite-analytics.yaml
apiVersion: v1
kind: Service
metadata:
  name: mfpanalytics
  namespace: default
  labels:
    app: mfpanalytics
spec:
  type: NodePort
  selector:
    app: mfpanalytics
  ports:
   - protocol: TCP
     port: 9080
     name: tcp-9080
   - protocol: TCP
     port: 9443
     name: tcp-9443
   - protocol: TCP
     port: 9600
     name: transport-port-9600
   - protocol: TCP
     port: 9500
     name: debug-port-9500
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mfpanalytics
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      name: mfpanalytics
      labels:
        app: mfpanalytics
    spec:
      containers:
        - name: mfpanalytics
          image: <registry.ng.bluemix.net/repository/mfpfanalytics:latest>
          ports:
          - containerPort: 9080
          - containerPort: 9443
          - containerPort: 9600
          - containerPort: 9500
          imagePullPolicy: Always
          volumeMounts:
            - name: config-volume
              mountPath: /opt/ibm/MobileFirst/envs/mfpenvfile
      volumes:
        - name: config-volume
          configMap:
            name: mfp-configmap-analytics
      imagePullSecrets:
        - name: bluemix-default-secret
---
