bmx-kubernetes/scripts/args/mfpf-deployment-lite-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: mfpserver
  namespace: default
  labels:
    app: mfpserver
spec:
  type: NodePort
  selector:
    app: mfpserver
  ports:
   - protocol: TCP
     port: 9080
     name: tcp-9080
   - protocol: TCP
     port: 9443
     name: tcp-9443
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mfpserver
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      name: mfpserver
      labels:
        app: mfpserver
    spec:
      containers:
        - name: mfpserver
          image: <registry.ng.bluemix.net/repository/mfpfserver:latest>
          imagePullPolicy: Always
          volumeMounts:
            - name: mfpconfigvolume
              mountPath: /opt/ibm/MobileFirst/envs/mfpenvfile
      volumes:
        - name: mfpconfigvolume
          configMap:
            name: mfp-configmap-server
      imagePullSecrets:
        - name: bluemix-default-secret
---
